--- a/kap1.tex
+++ b/kap1.tex
@@ -23,7 +23,7 @@ $(a_{n})_{n\in\N}$ bezeichnet die Folge, wobei $a:\N\rightarrow\R$
 \end{GTR-Tipp}
 
 \begin{Bemerkung}
-Es ist üblich eine rekursive Folge mit $a_{n+1}$ in Abhängigkeit von $a_n$ zu haben. Diese Darstellung ist mit dem GTR nicht direkt verwendbar. Man muss es \"umschreiben\" um $a_n$ in Abhängigkeit von $a_{n-1}$ zu haben.
+Es ist üblich eine rekursive Folge mit $a_{n+1}$ in Abhängigkeit von $a_n$ zu haben. Diese Darstellung ist mit dem GTR nicht direkt verwendbar. Man muss es umschreiben\" um $a_n$ in Abhängigkeit von $a_{n-1}$ zu haben.
 \end{Bemerkung}
 
 		\section{Verschiedene Darstellungen}
