--- a/kap2.tex
+++ b/kap2.tex
@@ -31,7 +31,7 @@ $1+2+3+...+n=\sum\limits_{k=1}^{n}k=\frac{n(n+1)}{2}$
 \begin{minipage}[c]{0.5\textwidth}
 	\underline{Begründung:}
 
-	\begin{tabular}{c∣c∣c∣c∣c∣c∣c}
+	\begin{tabular}{c | c | c | c | c | c}
 		&$1$&$2$&$3$&$4$&$...$&$n$\\\hline
 		&$n$&$n-1$&$n-2$&$n-3$&$...$&$1$\\\hline
 		$\sum$&$n+1$&$n+1$&$n+1$&$n+1$&$...$&$n+1$\\
