--- a/kap6.tex
+++ b/kap6.tex
@@ -14,14 +14,14 @@
 
 	\begin{align*}
 		\qquad \qquad x^2 + 1 &= 0 \\
-			\Leftrightarrow x &= \sqrt{-1} \quad \text{\Lightning}
+			\Leftrightarrow x &= \sqrt{-1} \quad \text{\lightning}
 	\end{align*}
 
 	\paragraph{} Um dieser und anderen Gleichungen eine Lösung zuzuteilen ist es nicht nur notwendig die Zahlenmenge zu erweitern, sondern
 	auch, neue Symbole und Zeichen einzuführen um die neuen Zahlen zu kennzeichnen. Für die $\Z$ ist es das Symbol \dq-\dq, für $\Q$
 	\dq,\dq und $\dfrac{a}{b}$, für $\R$ $\sqrt{a}$ und die Zeichen $\pi$ und $e$ zum Beispiel (auch wenn beide sich anders darstellen lassen). (Ein) gewisse(r) Mathematiker (Leibniz glaube ich) hat entschieden, dass das einzige benötigte Zeichen $i$ sein sollte, da er sie imaginäre Zahl nannte (Für den Fall, dass ich hier ein bisschen was durcheinander bringe, sind Direktverbesserungen kommentarlos erlaubt und erwünscht).
 
-	\begin{Definition}[- Imaginäre Einheit]
+	\begin{Definition}[Imaginäre Einheit]
 		Die Ikone $i$ der komplexen Zahl trägt den Namen \textbf{imaginäre Einheit} und wird folglich definiert:
 						$$i \in \C : i^2 = -1; \C \definedBy \R \cup \left\{i\right\}$$
 
@@ -29,7 +29,7 @@
 
 	\subsubsection{Algebraische Form}
 
-	\begin{Definition}[- Algebraische Formel]
+	\begin{Definition}[Algebraische Formel]
 		Komplexe Zahlen werden im Allgemeinen mit dem Buchstaben $z$ dargestellt oder aber auch $z_I$, wobei $I$ ein Punkt der Gauß'schen Zahlenebene ist (Weiteres hierzu folgt). Die sogenannte \textbf{algebraische / arithmetische Form} einer solchen Zahl wird wie folgt definiert:
 		\\
 		\begin{tikzpicture}
@@ -234,7 +234,7 @@
 			\end{tikzpicture}
 		\end{center}
 
-		\begin{Definition}[- Gauß'sche Zahlenebene]
+		\begin{Definition}[Gauß'sche Zahlenebene]
 			Seien eine reelle Achse mit Einheit 1 und eine imaginäre Achse mit Einheit $i$. Dann nennt sich \textbf{Gauß'sche Zahlenebene} gerade die Ebene, welche als Achsen die zueinander orthogonalen genannten Achsen hat. Konvention ist es, die imaginäre Achse vertikal zu platzieren.
 			\begin{center}
 				\begin{tikzpicture}[>=triangle 45]
@@ -265,12 +265,12 @@
 			Da jede komplexe Zahl eine Darstellung in der Gauß'schen Zahlenebene besitzt, lassen sie sich ebenfalls über einen Winkel und den Abstand zum Origo beschreiben.
 		\end{Bemerkung}
 
-		\begin{Definition}[- Betrag einer komplexen Zahl]
+		\begin{Definition}[Betrag einer komplexen Zahl]
 			Der \textbf{Betrag} einer komplexen Zahl ist gleichbedeutend mit dem \textbf{Abstand der Zahl zum Origo} oder der Länge des Zeigers. Pythagoras liefert uns eine Formel:
 													$$|z| \defeq \sqrt{x^2 + y^2} ; z = x + yi$$
 		\end{Definition}
 
-		\begin{Definition}[- Argument einer komplexen Zahl]
+		\begin{Definition}[Argument einer komplexen Zahl]
 			Das \textbf{Argument} einer komplexen Zahl ist gleichbedeutend mit dem \textbf{Winkel der Zahl}, welcher der Zeiger mit der \glqq rechten Hälfte\grqq der reellen Achse einschließt (im mathematischen Sinn und modulo $2\pi$). Pythagoras liefert uns weitere Formeln:
 
 			\begin{enumerate}[1)]
@@ -280,14 +280,14 @@
 
 		\end{Definition}
 
-		\begin{Definition}[- Betrag-Winkel Form]
+		\begin{Definition}[Betrag-Winkel Form]
 			Als \textbf{Betrag-Winkel Form} wird eine Darstellungsform einer komplexen Zahl definiert, welche diese explizit über deren Argument und Betrag definiert. Sie ist keine offizielle Darstellungsweise einer komplexen Zahl, jedoch bringt sie uns der nächsten wichtigen näher und fasst die zwei vorangehenden Definitionen zusammen.
 													$$z = |z|_{arg(z)}; z \in \C$$
 		\end{Definition}
 
 	\subsection{Polarform}
 
-		\begin{Definition}[- Polarform]
+		\begin{Definition}[Polarform]
 			Die \textbf{Polarform} einer komplexen Zahl definiert diese Zahl (wie auch die Betrag-Winkel Form) über deren \textbf{Argument und Betrag}.
 													$$z = |z| \cdot (\cos(arg(z)) + \sin(arg(z))i)$$
 		\end{Definition}
