--- a/kap11.tex
+++ b/kap11.tex
@@ -82,10 +82,12 @@
 
 \begin{Theorem}
   Für eine auf einem Intervall $I$ stetige Funktion $f$ und einer reellen Zahl $a\in I$ gilt: Die Funktion, die über $I$ definiert ist durch $x\mapsto\displaystyle{\int_a^xf(t)dt}$, ist die Stammfunktion von $f$, die bei $a$ gleich $0$ ist.
-\end{Theorem}\\
+\end{Theorem}
+
 Aus diesen Sätzen stellt sich der \textbf{Hauptsatz der Differenzial- und Integralrechnung} zusammen. Wir beschränken uns in diesem Kapitel auf die Integralrechnung, da die Differentialrechnung bereits in Kapitel \ref{Funktionsuntersuchung} behandelt wird.\\
 \begin{Bemerkung}
-  Man beobachtet hier eine Erweiterung der NEW-Regel (siehe \ref{NEW-Regel}, NEW-Regel):\\\\
+  Man beobachtet hier eine Erweiterung der NEW-Regel (siehe \ref{NEW-Regel}, NEW-Regel):
+
   \begin{minipage}[b]{0.2\linewidth}
     N $=$ Nullstellen\\
     E $=$ Extremstellen\\
@@ -93,37 +95,41 @@ Aus diesen Sätzen stellt sich der \textbf{Hauptsatz der Differenzial- und Integ
   \end{minipage}
   \hfill \vline \hfill
   \begin{minipage}[b]{0.4\linewidth}
-    \begin{array}{rcccccl}
-    F &   N & E & W & & \\
-    f & \qquad \qquad& N & E & W & & \\
-    f' & \qquad \qquad && N & E & W & \\
-    \end{array}
+    $\begin{array}{rcccccl}
+      F &   N & E & W & & \\
+      f & \qquad \qquad& N & E & W & & \\
+      f' & \qquad \qquad && N & E & W & \\
+    \end{array}$
   \end{minipage}
 \end{Bemerkung}
-\section{Sätze über Integrale}
-\begin{Theorem}
-\begin{center}
-  \begin{tabular}{r c l l}
-    \( \displaystyle\int_a^b f(x)dx\) & $=$ &  -\( \displaystyle\int_b^a f(x)dx\) & Invertieren der Intergrationsgrenzen \\
-    \( \displaystyle\int_a^b (f(x)+g(x))dx \) & $=$ &  \( \displaystyle\int_a^b f(x)dx + \int_a^b g(x)dx\) & Summenregel\\
-    \( \displaystyle\int_a^b r*f(x)dx\)  & $=$ &  \( \displaystyle r*\int_a^b f(x)dx\) & Linearität\\
-    \( \displaystyle\int_a^b f(x)dx +\int_b^c f(x)dx\)  & $=$ &  \( \displaystyle\int_a^c f(x)dx\) & Abschnittweise Integration
-\end{tabular}
 
-\end{center}
+
+\section{Sätze über Integrale}
+
+\begin{Theorem}
+  \begin{center}
+    \begin{tabular}{r c l l}
+      \( \displaystyle\int_a^b f(x)dx\) & $=$ &  -\( \displaystyle\int_b^a f(x)dx\) & Invertieren der Intergrationsgrenzen \\
+      \( \displaystyle\int_a^b (f(x)+g(x))dx \) & $=$ &  \( \displaystyle\int_a^b f(x)dx + \int_a^b g(x)dx\) & Summenregel\\
+      \( \displaystyle\int_a^b r*f(x)dx\)  & $=$ &  \( \displaystyle r*\int_a^b f(x)dx\) & Linearität\\
+      \( \displaystyle\int_a^b f(x)dx +\int_b^c f(x)dx\)  & $=$ &  \( \displaystyle\int_a^c f(x)dx\) & Abschnittweise Integration
+    \end{tabular}
+  \end{center}
 \end{Theorem}
 
-\begin{Beweis}[- Invertieren der Intergrationsgrenzen]
+\begin{Beweis}[Invertieren der Intergrationsgrenzen]
   $$\int_a^b f(x)dx = F(b)-F(a) = -(F(a)-F(b)) = -\int_b^a f(x)dx$$
 \end{Beweis}
-\begin{Beweis}[- Summenregel]
+
+\begin{Beweis}[Summenregel]
   $$\int_a^b f(x)+g(x)dx = [F(x)+G(x)]_a^b = F(b)+G(b)-(F(a)+G(b)) = F(b)-F(a)+G(b)-G(b) $$$$= \int_a^b f(x)dx+\int_a^b g(x)dx$$
 \end{Beweis}
-\begin{Beweis}[- Linearität]
+
+\begin{Beweis}[Linearität]
   $$\int_a^b r*f(x)dx = [r*F(x)]_a^b = r*F(b)-r*F(a) = r*(F(a)-F(b)) = r*\int_a^b f(x)dx$$
 \end{Beweis}
 
-\begin{Beweis}[- Abschnittweise Integration]
+\begin{Beweis}[Abschnittweise Integration]
   $$\int_a^b f(x)dx+ \int_b^c f(x)dx = F(a)-F(b)-(F(b)-F(c)) = F(c)-F(a) = \int_a^c f(x)dx$$
 \end{Beweis}
 
@@ -131,9 +137,11 @@ Aus diesen Sätzen stellt sich der \textbf{Hauptsatz der Differenzial- und Integ
   Sei eine in $[a;b]$ stetige Funktion $f$. Wenn für $m,M \in \R$ gilt: $m\leq f(t) \leq M \; \forall t \in [a;b]$, dann gilt:
   $$m(b-a) \leq \int_a^b f(t)dt \leq M(b-a)$$
 \end{Theorem}
+
 \begin{Beweis}
   Es reicht, $m \leq f(t) \leq M$ als Ungleichung zwischen $a$ und $b$ zu integrieren.
 \end{Beweis}
+
 \begin{minipage}{0.5\linewidth}
   \begin{Bemerkung}
     Eine Konsequenz davon ist, dass falls $|f(t)|\leq M \; \forall t \in [a;b]$, dann gilt:
@@ -170,6 +178,7 @@ Aus diesen Sätzen stellt sich der \textbf{Hauptsatz der Differenzial- und Integ
 \end{minipage}
 
 Außerdem:
+
 \begin{Definition}
   Für eine auf $[a;b]$ stetige Funktion $f$ mit $a \neq b$ gilt: Der Mittelwert von $f$ auf $[a;b]$ ist gegeben durch $$\mu = \dfrac{1}{b-a} \int_a^b f(t)dt$$
 \end{Definition}
@@ -179,20 +188,24 @@ Außerdem:
 \subsection{Potenzregel}
 Hoffentlich einleuchtend und selbstverständlich:
 \begin{Theorem}
-  $$\forall n \in \Z \textbackslash \{ -1\}:\int  x^n dx = \frac{1}{n+1}x^{n+1} + C$$
+  $$\A n \in \Z \textbackslash \{ -1\}:\int  x^n dx = \frac{1}{n+1}x^{n+1} + C$$
 \end{Theorem}
+
 \begin{Bemerkung}
   Die einzige Ausnahme stellt der Fall $n=-1$ dar:
   \begin{Theorem}
     $$\int \dfrac{1}{x} dx = \ln(|x|) + C$$
   \end{Theorem}
-\end{Bemerkung}\\
+\end{Bemerkung}
+
 Eine Konsequenz dessen ist:
+
 \begin{Theorem}
   $$\int \dfrac{a}{bx+c} dx = \dfrac{a}{b}\ln(|bx+c|) + C$$
 \end{Theorem}
+
 \begin{Beweis}
-  $$\left(\dfrac{a}{b}\ln(|bx+c|)\right)' = \dfrac{a}{b}\cdot \dfrac{1}{bx+c}\cdot b = \dfrac{a}{bx+c}$$
+  $$\left ( \dfrac{a}{b}\ln(|bx+c|)\right )' = \dfrac{a}{b}\cdot \dfrac{1}{bx+c}\cdot b = \dfrac{a}{bx+c}$$
 \end{Beweis}
 
 \subsection{Partielle Integration}
@@ -200,37 +213,44 @@ Eine Konsequenz dessen ist:
   Seien $u$ und $v$ zwei stetig differenzierbare Funktionen auf dem Intervall $I$. Dann gilt:
   $$\int u(x)'v(x) dx= u(x)v(x) - \int u(x)v'(x) dx$$
 \end{Theorem}
-\begin{Beweis}\\
-\begin{align*}
-  &&(u(x)*v(x))' &= u'(x)v(x)+u(x)v'(x)\\
-  &\Rightarrow & \int (u(x)*v(x))' dx &= \int u'(x)v(x)dx+\int u(x)v'(x)dx\\
-  &\Leftrightarrow & u(x)*v(x) &= \int u'(x)v(x)dx + \int u(x)v'(x)dx\\
-  &\Leftrightarrow & \int u(x)v'(x)dx &= u(x)*v(x)- \int u'(x)v(x)dx\\
-\end{align*}
+
+\begin{Beweis}
+  \begin{align*}
+    &&(u(x)*v(x))' &= u'(x)v(x)+u(x)v'(x)\\
+    &\Rightarrow & \int (u(x)*v(x))' dx &= \int u'(x)v(x)dx+\int u(x)v'(x)dx\\
+    &\Leftrightarrow & u(x)*v(x) &= \int u'(x)v(x)dx + \int u(x)v'(x)dx\\
+    &\Leftrightarrow & \int u(x)v'(x)dx &= u(x)*v(x)- \int u'(x)v(x)dx\\
+  \end{align*}
 \end{Beweis}
+
 \begin{Beispiel}
   \begin{align*}
-  \int x\sin(x) dx & \text{\qquad Mit $u(x)=x$; $u'(x)=1$; \,$v(x)=\sin(x)$; $v'(x)=-\cos(x)$}\\
-  &= \int x(-\cos(x))' dx\\
-  &= -x\cos(x) - \int-\cos(x)*1 dx\\
-  &= -x\cos(x) + \int\cos(x) dx\\
-  &= -x\cos(x) + \sin(x)
-\end{align*}
+    \int x\sin(x) dx & \text{\qquad Mit $u(x)=x$; $u'(x)=1$; \,$v(x)=\sin(x)$; $v'(x)=-\cos(x)$}\\
+    &= \int x(-\cos(x))' dx\\
+    &= -x\cos(x) - \int-\cos(x)*1 dx\\
+    &= -x\cos(x) + \int\cos(x) dx\\
+    &= -x\cos(x) + \sin(x)
+  \end{align*}
 \end{Beispiel}
 
+
 \subsection{Substitution}
+
 \begin{Theorem}
   Sei $f$ eine auf $[a;b]$ stetige funktion und $g$ eine auf diesem Intervall differenzierbare Funktion mit stetiger Ableitung
   $g'$. Wenn die Verkettung $f \circ g$ existiert, gilt:
   $$\int_a^b f(g(x))\cdot g'(x)dx=\int_{g(a)}^{g(b)}f(z)dz$$
-\end{Theorem}\\
+\end{Theorem}
+
 Eine abgespeckte Variante dieses Theorems, genannt lineare Substitution ist gegeben durch:
+
 \begin{Theorem}
   Für ein Funktion $f$ mit einer Stammfunktion $F$ und $r\neq 0$ gilt:
   $$\int_a^b f(rx+s)dx=\dfrac{1}{r}[F(rx+s)]_a^b + C$$
 \end{Theorem}
+
 \begin{Beispiel}
-    Zu berechnen: $$\int_0^4 \dfrac{x\sqrt{x}}{1 + x^2\sqrt{x}} dx$$ \\
+    Zu berechnen: $$\int_0^4 \dfrac{x\sqrt{x}}{1 + x^2\sqrt{x}} dx$$
     \textbf{Substitution}:
     \begin{align*}
         \quad \qquad \qquad \qquad \qquad \qquad
@@ -249,34 +269,47 @@ Eine abgespeckte Variante dieses Theorems, genannt lineare Substitution ist gege
     \end{align*}
 \end{Beispiel}
 
+
 \subsection{Substitution der Integrationsvariablen}
+
 \begin{Theorem}
   Sei $f$ eine auf $[a;b]$ stetige funktion und $g$ eine auf diesem Intervall differenzierbare und umkehrbare Funktion mit stetiger
   Ableitungsfunktion $g'$. Wenn die verkettung $f \circ g$ esxistiert, gilt:
   $$\int_a^b f(x)dx=\int_{\bar g (a)}^{\bar g (b)}f(g(t))*g'(t)dt$$
 \end{Theorem}
 
+
 \subsection{Integrale von $e$-Funktionen}
+
 \begin{Theorem}
   Für $f(x)=e^{l(x)}$ mit $l(x) = ax+b$ gilt: $F(x) = \dfrac{1}{a}e^{l(x)}$
 \end{Theorem}
+
 \begin{Beweis}
   Man bilde $F'(x)$.
 \end{Beweis}
+
+
 \subsection{Integrale von $\ln()$-Funktionen}
+
 Es handelt sich hierbei streng genommen auch um eine Substitution:
 \begin{Theorem}
   Für $x \in \R^{+}$ ist $F$ eine Stammfunktion zur Funktion $f(x) = \ln(x)$ mit $F(x) = x \ln(x)-x$
 \end{Theorem}
+
 \begin{Beweis}
   Der Beweis erfolgt über partielle Integration und wird dem Schüler als Übung überlassen.
 \end{Beweis}
+
+
 \subsection{Integrale von (un)geraden Funktionen}
+
 \begin{Theorem}
   Sei $f$ eine auf einem Intervall $I$ stetige und auf $0$ zentrierte Funktion. Wenn $f$ gerade ist, gilt $\forall a\in \R$:
   $\displaystyle{\int_{-a}^{a} f(t)dt = 2\int_{0}^{a} f(t)dt } $, und wenn $f$ ungerade ist:
-  $\( \displaystyle\int_{-a}^{a} f(t)dt = 0 \) $
+  $$\displaystyle\int_{-a}^{a} f(t)dt = 0$$
 \end{Theorem}
+
 \begin{Beweis}
   Sei die Funktion $\varphi(x) = \( \displaystyle\int_{-x}^{x}f(t)dt = F(x)-F(-x)$ mit $F$, einer Stammfunktion von $f$. Also ist $\varphi$ auf
   $I = [-x;x]$ differenzierbar und $\varphi'(x) = F'(x)-F'(-x)=f(x)+f(-x)$.\\
@@ -286,22 +319,27 @@ Es handelt sich hierbei streng genommen auch um eine Substitution:
   \end{itemize}
 \end{Beweis}
 
+
 \subsection{Integrale von periodischen Funktionen}
+
 \begin{Theorem}
   Für jede in $\R$ stetige und periodische Funktion $f$ gilt:
   \begin{center}
   \( \displaystyle\int_a^{a+T} f(x)dx\) ist unabhängig von $a$ und \( \displaystyle\int_a^{a+T} f(x)dx = \int_0^{T} f(x)dx\)
   \end{center}
 \end{Theorem}
+
 \begin{Beweis}
   Sei die Funktion $\varphi = \displaystyle{\int_x^{x+T} f(t)dt}=F(x+T)-F(x)$ mit $F$, einer Stammfunktion von $f$. Dann ist
   $\varphi(x)$ auf $f$ differenzierbar und $\varphi'(x)=F'(x+T)-F'(x) = f(x+T)-f(x)=0$ (denn $f$ hat die Periode $T$). Also ist $\varphi(x)$ auf $\R$ konstant. Daraus folgt, dass $\displaystyle{\int_a^{a+T}f(t)dt}$ nicht von $a$ abhängt und dass $\displaystyle{\int_a^{a+T} f(x)dx = \int_0^{T} f(x)dx}$.
 \end{Beweis}
 
 
+
 \section{Flächen und Volumen mit Integralen berechnen}
 
 \subsection{Fläche zwischen einer Funktion und der $x_1$-Achse}
+
 \begin{Definition}
   Für die auf dem Intervall $[a;b]$ (also stückweise) stetige Funktion $f$ mit Nullstellen und $x_1,x_2,...,x_n$
   mit $a \leq x_1 \leq x_2 \leq ... \leq x_n \leq b$ ist der Flächeninhalt $A$ zwischen dem Graphen von $f$ und
@@ -311,7 +349,9 @@ Es handelt sich hierbei streng genommen auch um eine Substitution:
     &= \left|{\int_a^{b} f(x)dx}\right|
   \end{align*}
 \end{Definition}
-Bildhaft sieht das folgendermaßen aus:\\
+
+Bildhaft sieht das folgendermaßen aus:
+
 \begin{minipage}[t]{0.5\textwidth}
   \definecolor{lightblu}{rgb}{0,0,0.3}
   \definecolor{lightgree}{rgb}{0,0.3,0}
@@ -336,11 +376,13 @@ Bildhaft sieht das folgendermaßen aus:\\
     \draw[line width=0.8pt,color=lightblu] (-1.5,-1.1) node {$A$};
     \draw[line width=0.8pt,color=lightgree] (2.3,1.9) node {$B$};
     \draw[line width=0.8pt,color=red] (2,4) node {$K$};
-  \end{tikzpicture}\\
+  \end{tikzpicture}
+
   \begin{align*}
     \textcolor{orange}{C}  &= \textcolor{lightblue}{A} + \textcolor{lightgree}{B}\\
     &= |{\int_{\textcolor{orange}{a}}^{\textcolor{orange}{x_1}} f(x)dx}| + |{\int_{\textcolor{orange}{x_1}}^{\textcolor{orange}{b}} f(x)dx}|
   \end{align*}
+  
 \end{minipage}
 \begin{minipage}[t]{0.5\textwidth}
   \definecolor{lightblu}{rgb}{0,0,0.3}
@@ -375,66 +417,84 @@ Bildhaft sieht das folgendermaßen aus:\\
     \draw[line width=0.8pt,color=red] (1.45,4.05) node{"$ $};
     \draw[line width=0.8pt,color=red] (1.8,4) node {$|K|$};
     \draw[line width=0.8pt,color=red] (2.15,4.05) node{"$ $};
-  \end{tikzpicture}\\
+  \end{tikzpicture}
+
   \begin{align*}
     \textcolor{orange}{C} &= \textcolor{lightblue}{A} + \textcolor{lightgree}{B}\\
     &= {\int_{\textcolor{orange}{a}}^{\textcolor{orange}{x_1}} f(x)dx} + {\int_{\textcolor{orange}{x_1}}^{\textcolor{orange}{b}} f(x)dx}\\
     &= {\int_{\textcolor{orange}{a}}^{\textcolor{orange}{b}} f(x)dx}
   \end{align*}
 \end{minipage}
-\\
+
+
 \begin{Beispiel}
-  $f(x)=x^2-2x^3;x\in \R$\\
-  notwendige und hinreichende Bedingung für Nullstellen:$f(x)=0$\\
-  $\Leftrightarrow x^2(1-2x)&=0\\
+  $f(x)=x^2-2x^3;x\in \R$
+
+  notwendige und hinreichende Bedingung für Nullstellen:$f(x)=0$
+
+  $\Leftrightarrow x^2(1-2x)&=0
+  
   \stackrel{SdN}{\Leftrightarrow}
-  \left\{ \begin{array}{rcl}
+  \left \{ \begin{array}{rcl}
   x^2&=0\\
   1-2x&=0
-  \end{array}\right\\
+  \end{array}\right .\\
   \Leftrightarrow
-  \left\{ \begin{array}{rcl}
+  \left \{ \begin{array}{rcl}
   x_1&=0\\
   x_2&=\dfrac{1}{2}
-  \end{array}\right\\
-  $\\
-  Also gilt:\\
+  \end{array}\right .$
+
+  Also gilt:
+  
   \begin{align*}
     A_{-1}^{1} &= \left|\int_{-1}^0 x^2-2x^3 dx\right| + \left|\int_{0}^{0.5} x^2-2x^3 dx\right| + \left|\int_{0.5}^1 x^2-2x^3 dx\right|\\
     &= \left|\left[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\right]_{-1}^0\right| + \left|\left[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\right]_{0}^{0.5}\right| + \left|\left[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\right]_{0.5}^1\right|\\
     &= \left|0-\left(-\dfrac{1}{3}-\dfrac{1}{2}\right)\right| + \left|\dfrac{1}{24}-\dfrac{1}{32}-0\right| + \left|\dfrac{1}{3}-\dfrac{1}{2}- \left(\dfrac{1}{24}-\dfrac{1}{32}\right)\right|\\
     &= 1 + \dfrac {1}{12} - \dfrac{1}{16}\\
     &= \dfrac{49}{48} \text{  FE}
-\end{align*}
+  \end{align*}
 \end{Beispiel}
+
 \begin{GTR-Tipp}
-Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in \texttt{MATH} > \texttt{NUM} oder über \texttt{F2}, also \texttt{ALPHA}+\texttt{WINDOW}) lässt sich die Fläche berechnen über \texttt{MATH} > \texttt{MATH} mit der Option \texttt{fnInt}.\\
+  Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in \texttt{MATH} > \texttt{NUM} oder über \texttt{F2}, also \texttt{ALPHA}+\texttt{WINDOW}) lässt sich die Fläche berechnen über \texttt{MATH} > \texttt{MATH} mit der Option \texttt{fnInt}.
+
   Hierzu wählt man $Y_2$ aus und gibt $a$ und $b$ an.
 \end{GTR-Tipp}
 
 
 \subsection{Fläche zwischen zwei Funktionen}
+
 \begin{Theorem}
-  Für zwei auf $[a;b]$ stetige Funktionen $f$ und $g$ gilt: Die Fläche zwischen ihren Schaubildern $C_f$ und $C_g$ ist gegeben durch: $\( \displaystyle \int_a^b (g(x)-f(x))dx$\).
+  Für zwei auf $[a;b]$ stetige Funktionen $f$ und $g$ gilt: Die Fläche zwischen ihren Schaubildern $C_f$ und $C_g$ ist gegeben durch:
+  $$\displaystyle \int_a^b (g(x)-f(x))dx$$
 \end{Theorem}
+
+
 \subsection{Volumenangaben mittels Integralen}
+
 \begin{Theorem}
   Man betrachtet einen Körper, der durch zwei parallele Ebenen mit den Gleichungen $x_3 = a$ und $x_3 = b$ begrenzt wird.
   Für alle $a\leq z \leq b$ nennt man $P_z$ die zur $x_1$-Achse orthogonale Fläche mit der Seite $z$ und $S(z)$ die Fläche des
   Schnitts des Körpers durch $P_z$. Ist $S$ stetig, so ist ist das Volumen $V$ des Körpers gegeben durch:
-  $$V=\int_a^b S(z)dz$$\\
+  $$V=\int_a^b S(z)dz$$
 \end{Theorem}
+
 \begin{Bemerkung}
   Analog zur Unterteilung einer Fläche in kleine Balken, kann man ein Volumen in kleine Scheiben unterteilen.
 \end{Bemerkung}
+
 \begin{Bemerkung}
   Dieses Theorem nehmen wir hin, ohne es zu beweisen, uns geht es ohnehin um die Schlussfolgerungen, die wir daraus ziehen können:
 \end{Bemerkung}
+
 \begin{Theorem}
   Ein Körper, der durch die Rotation der Kurve von $f$ um die $x_1$-Achse entsteht, hat ein Volumen von
-  \( \displaystyle \pi \int_a^b f^2(z)dz\).\\
+  \( \displaystyle \pi \int_a^b f^2(z)dz\).
+
   Tatsächlich ist die Fläche eines zur $x_3$-Achse parallelen Querschnitts die der Scheibe mit Radius $f(z)$.
 \end{Theorem}
+
 \begin{minipage}{0.8\textwidth}
   \definecolor{ffqqqq}{rgb}{1,0,0}
   \definecolor{ccqqqq}{rgb}{0.8,0,0}
@@ -451,7 +511,7 @@ Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in \texttt{M
   \end{tikzpicture}
 \end{minipage}
 \begin{minipage}{0.2\textwidth}
-  \uptodownarrow
+  \updownarrow
 \end{minipage}
 \section{Uneigentliche Integrale}
 \begin{Definition}
@@ -494,6 +554,7 @@ Diese sollten ohne weitere Rechtfertigung oder Beweis verwendet werden dürfen. 
   \int\dfrac{u'(x)}{u(x)} dx &= \ln(|u(x)|) + C\\
   \int e^{ax+b}dx &= \dfrac{1}{a}e^{ax+b} + C
 \end{align*}
-\\
+
 $\danger$ Definitionsmengen sind zu beachten.
+
 \end{document}
