--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11p,a4paper,fleqn,twoside,openright]{report}
+\documentclass[11pt,a4paper,fleqn,twoside,openright]{report}
 \nonstopmode
 \relax
 
